update sentry self hosted

--- a/TimesheetBackend/src/main/resources/application.properties
+++ b/TimesheetBackend/src/main/resources/application.properties
@@ -24,3 +24,8 @@ redis.port=6379
 swagger.title=Timesheet
 swagger.description=Timesheet
 swagger.version=1.0
+
+# Sentry
+sentry.dsn=http://e57532636e8a4647892704f226f3e49c@localhost:9000/2
+sentry.enabled=true
+spring.profiles.active=local
