update handle employee

--- a/TimesheetBackend/src/main/resources/application.properties
+++ b/TimesheetBackend/src/main/resources/application.properties
@@ -25,6 +25,9 @@ swagger.title=Timesheet
 swagger.description=Timesheet
 swagger.version=1.0
 
+# ngrok
+ngrok.baseUrl=http://special-barely-macaque.ngrok-free.app
+
 # Sentry
 sentry.dsn=http://e57532636e8a4647892704f226f3e49c@localhost:9000/2
 sentry.enabled=true
