--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,6 @@
 version: '3.8'
 
 services:
-  Timesheet-Backend:
-    build:
-      context: ./TimesheetBackend
-      dockerfile: DockerFile
-    image: victosmat/timesheet-backend:latest
-    container_name: Timesheet-backend
-    command: java -jar timesheet-backend.jar
-    ports:
-      - "8081:8081"
-    working_dir: /Timesheet
-    volumes:
-      - ./target:/Timesheet/target
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/employee_management_system
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: minh1892001
   mysql:
     image: mysql:8.0
     container_name: mysql
@@ -28,11 +12,25 @@ services:
     ports:
       - "3306:3306"
 
-  redis:
-    image: redis:6.2
-    container_name: redis
+  Timesheet-Backend:
+    build:
+      context: ./TimesheetBackend
+      dockerfile: DockerFile
+    image: victosmat/timesheet-backend:latest
+    container_name: Timesheet-backend
+    command:
+      - java -jar timesheet-backend.jar
+      - sleep 10
+      - mysql -h mysql -u root -p minh1892001 employee_management_system < /TimesheetBackend/src/main/resources/db_data.sql
     ports:
-      - "6379:6379"
+      - "8081:8081"
+    working_dir: /Timesheet
+    volumes:
+      - ./target:/Timesheet/target
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/employee_management_system
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: minh1892001
 
 volumes:
   mysql-data-Timesheet:
