--- a/TimesheetBackend/src/main/resources/application.properties
+++ b/TimesheetBackend/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.username=root
 spring.datasource.password=minh1892001
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 jwt.secret = username
